package behavioral.observer.Topic;



public interface TopicListener {
    void listen(TinTuc t);
}
